# XEFtoEXR

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
source/: CMakeLists.txt  ColorFrame.cpp  ColorFrame.hpp  Constants.hpp  DepthFrame.cpp  DepthFrame.hpp  GUID.cpp  GUID.hpp  PointCloudExporter.cpp  PointCloudExporter.hpp  SkeletonExporter.cpp  SkeletonExporter.hpp  ThreadPool.cpp  ThreadPool.hpp  XEFBodyFrame.cpp  XEFBodyFrame.hpp  XEFEvent.cpp  XEFEvent.hpp  XEFReader.cpp  XEFReader.hpp  XEFStream.cpp  XEFStream.hpp  jsonConversion.cpp  jsonConversion.hpp  main.cpp
source/XEF/: XEFBodyFrame.cpp  XEFBodyFrame.hpp  XEFEvent.cpp  XEFEvent.hpp  XEFReader.cpp  XEFReader.hpp  XEFStream.hpp
